# feast

./: LICENSE  README  README.md  build.pl
src/: .cvsignore  CMakeLists.txt  Doxyfile  FindBlitz.cmake
src/btl/: .cproject  .project
src/btl/trunk/: .cvsignore  CMakeLists.txt  dna.cc  dna_gap.cc  dna_gap_symbol.cc  dna_iupac.cc  dna_iupac_gap.cc  dna_iupac_symbol.cc  dna_symbol.cc  mdna.cc  mdna_iupac.cc  mdna_iupac_gap.cc  mdna_iupac_gap_symbol.cc  mdna_iupac_symbol.cc  mdna_symbol.cc
src/btl/trunk/btl/: algorithm.h  annotated_sequence.h  annotation.h  basic_tree.h  binary_tree_utility.h  dna.h  dna_gap.h  dna_gap_symbol.h  dna_iupac.h  dna_iupac_gap.h  dna_iupac_symbol.h  dna_symbol.h  fasta_reader.h  fasta_writer.h  gff_feature.h  logint.h  loginti.h  logspace.h  mdna.h  mdna_iupac.h  mdna_iupac_gap.h  mdna_iupac_gap_symbol.h  mdna_iupac_symbol.h  mdna_symbol.h  newick_reader.h  newick_writer.h  phylogenetic_tree.h  sequence.h  tree_utility.h
src/buildmanager/: build_number.cc  generate_build_string.pl
src/cape/: CMakeLists.txt  cape_main.cc  cape_pairwise_aligner.cc  cape_pairwise_aligner.h  custom_fragment_score_worker.cc  custom_fragment_score_worker.h  dynamic_fragment_score_worker.cc  dynamic_fragment_score_worker.h
src/explore/: CMakeLists.txt  dot_plot.cc  dot_plot.h  ex_sequence.h  explore_io.cc  explore_io.h  explore_main.cc  match_data.h
src/feast/: CMakeLists.txt  feast_main.cc  least.h
src/libs/: CMakeLists.txt
src/libs/algorithmextra/: algorithm_extra.h
src/libs/alignment/: CMakeLists.txt  alignment_functions.cc  alignment_functions.h  annotation_interval.cc  annotation_io.cc  annotation_io.h  basic_nw_model_parameters.cc  basic_nw_model_parameters.h  dna_alignment_sequence.h  extension.h  local_segmentation.h  mm_alignment.cc  mm_alignment.h  mm_trainer.cc  mm_trainer.h  multi_alignment_model.cc  multi_alignment_model.h  needleman.cc  needleman.h  nw_model_parameters.cc  nw_model_parameters.h  pairwise_dna_alignment.h  parameter_functions.cc  parameter_functions.h  simple_nw_model_parameters.cc  simple_nw_model_parameters.h  sm_extension.cc  sm_extension.h
src/libs/backgrounds/: second_order_background.cc  second_order_background.h  zero_order_background.h
src/libs/chaining/: CMakeLists.txt  chaining_algorithm.cc  chaining_algorithm.h  local_chain.h
src/libs/concurrency/: concurrent_queue.h
src/libs/fragments/: CMakeLists.txt  fragment.cc  fragment.h  fragment_algorithm.cc  fragment_algorithm.h  fragment_functions.h  fragment_selectors.h  scored_fragment.cc  scored_fragment.h  scored_fragment_selectors.h  transformed_fragment.cc  transformed_fragment.h
src/libs/io/: CMakeLists.txt  io.h  main_io.cc  main_io.h
src/libs/math/: CMakeLists.txt  closed_interval.cc  closed_interval.h  ereal.h  point.h  point_hash.h  statistics.h
src/libs/phmm/: CMakeLists.txt  diagonal_store.cc  diagonal_store.h  extension_store.cc  extension_store.h  pair_hmm.h
src/libs/random/: CMakeLists.txt  entropy.cc  entropy.h
src/libs/seeding/: CMakeLists.txt  bitpacked_dna_data.h  char_hash_function.h  djb2_hash.h  fast_hash_factory.h  fast_hash_hit_data.h  hash_factory.h  hash_hit_data.cc  hash_hit_data.h  null_hash.h  point_hit_builder.h  random_seed_factory.cc  random_seed_factory.h  seed.cc  seed.h  seed_factory.h
src/libs/sequence/: CMakeLists.txt  dna_sequence.h  dna_sequence_region.h  input_data.h  input_sequence.h  reverse_dna_sequence_region.h  reverse_sequence_region.h  sequence_region.h  sequence_statistics.h  sequence_statistics_functions.cc  sequence_statistics_functions.h  triplet_table.h
src/libs/utility/: utility.h
src/mfa2maf/: CMakeLists.txt  mfa2maf_main.cc
src/rda/: CMakeLists.txt  annotation.cc  annotation.h  annotation_functions.cc  annotation_interval.h  krda_improve.h  krdalign.cc  krdalign.h  rda_functions.cc  rda_functions.h  rda_main.cc  similarity_region.h
src/tests/: CMakeLists.txt
src/tests/extension_store/: CMakeLists.txt  main.cc
